fix invalid vote alignment

--- a/avBooth/simultaneous-questions-screen-directive/simultaneous-questions-screen-directive.less
+++ b/avBooth/simultaneous-questions-screen-directive/simultaneous-questions-screen-directive.less
@@ -138,7 +138,8 @@
     font-size: 20px;
   }
 
-  .category-body {
+  .invalid-vote-col {
+    padding: 0 15px;
   }
 
   [av-affix-bottom] {
